# douko-todo-list

./: .gitignore  CHANGELOG.md  DEPLOY.md  README.md  Todo List 桌面应用设计文档（Tauri + Vue 3 + Axum）.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: collect-release-artifacts.mjs  create-and-sign-updater.mjs  dev-with-wait.mjs  flatten-release-assets.mjs  merge-latest-json.mjs  regenerate-signing-key.mjs  release.mjs  sync-version.mjs
src/: App.vue  i18n.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  qrcode-window.json  settings-window.json  sidebar-window.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-clear_background_image.toml  allow-get_app_version.toml  allow-open_qrcode_window.toml  allow-open_settings_window.toml  allow-refresh_main_window_transparency.toml  allow-save_background_image.toml  allow-set_sidebar_width.toml  allow-storage-info.toml
src-tauri/scripts/: gen-icon.cjs
src-tauri/src/: lib.rs  main.rs  server.rs
src/components/: MobileTodoForm.vue  MobileTodoItem.vue  QrcodeDisplay.vue  TodoForm.vue  TodoList.vue
src/locales/: en.ts  ja.ts  zh-CN.ts
src/router/: index.ts
src/utils/: request.ts  theme.ts
src/views/: Desktop.vue  MobileTodo.vue  QrcodeWindow.vue  SettingsWindow.vue
