[package]
name = "xy-todo-list"
version = "1.0.0"
description = "支持 Windows、macOS、Linux 三端的轻量化桌面 Todo List 应用"
authors = ["XYCoder"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "xy_todo_list_lib"
path = "src/lib.rs"

[[bin]]
name = "xy-todo-list"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
url = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = { version = "2" }
tauri-plugin-process = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1.6", features = ["v4"] }
local-ip-address = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
